# mmic

./: README.md  main.py  mmic2.html  mmic3.html  package-lock.json  pyproject.toml  replit_zip_error_log.txt  requirements.txt
static/: jquery.hijri.date.js  script.js  script2.js  slideshow.js  style.css  stylev.css  times-REAL.csv
templates/: base.html  dsv.html  halaqah.txt  site_2.html
