[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
bs4 = "^0.0.1"
Flask = "^2.1.2"
Flask-Compress = "^1.12"
gevent = "^21.12.0"
requests = "^2.28.0"
x-ray = "^0.3.3"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"